# finance-automator-public

./: README.md  pyproject.toml  정산업무자동화.py
finance/channels/: ably.py  cm29.py  hago_city.py  kakao_present.py  kakaopay.py  lf_mall.py  lotte_on.py  musinsa.py  musinsa_global.py  naverpay.py  seoul_store.py  ssf.py  ssg.py  w_concept.py  zigzag.py
finance/xl/: password.py
gui/pages/: LF몰.py  SSG.py  W컨셉.py  ⚠️지그재그.py  롯데ON.py  무신사 글로벌.py  서울스토어.py  카카오선물하기.py  하고.py
pages/:  29cm.py  SSF.py  네이버페이.py  무신사.py  에이블리.py
utils/: temp.py
